...
                        HStack {
                            Image(systemName: "chevron.left")
                            Text("Back")
                        }
                        .foregroundColor(Theme.primaryColor)
                    }
                    .accessibilityIdentifier("BackButton")
                    .accessibilityElement(children: .ignore) // Prevent inheritance
                    
                    Spacer()
                }
                .padding(.horizontal, 24)
                
...
                        if let difficulty = selectedDifficulty {
                            UserDefaults.standard.set(difficulty.rawValue, forKey: "selectedDifficulty")
                        }
                        gameStateManager.transition(to: .playing)
                    }
                    .buttonStyle(NinjaButtonStyle())
                    .accessibilityIdentifier("StartSelectedGame")
                    .accessibilityElement(children: .ignore) // Prevent inheritance
                    .transition(.scale.combined(with: .opacity))
                }
                
                Spacer()
            }
...
